--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,10 @@ Bugfixes
 * Fix margins of paragraphs at the end of sections (Issue #3704)
 * Ignore ``.DS_Store`` files in listing indexes (Issue #3698)
 * Fix baguetteBox.js invoking in the base theme (Issue #3687)
+* Fix development (preview) server `nikola auto`
+  for non-root SITE_URL, in particular when URL_TYPE is full_path.
+  (This does not yet fix `nikola serve`,
+  see https://github.com/getnikola/nikola/issues/3726 .)
 
 New in v8.2.4
 =============
